Update integration tests for Trading 212 API to support USD account data; modify test cases for account cash and metadata retrieval, ensuring consistency with mock data. Adjust pytest configuration for coverage reporting and enhance assertions for account summaries and positions.

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,7 +6,7 @@ python_functions = test_*
 addopts = 
     -v
     --tb=short
-    --cov=export_portfolio
+    --cov=trading212_exporter
     --cov-report=html
     --cov-report=term-missing
     --cov-fail-under=80
