Enhance Trading 212 Portfolio Exporter to support CSV export functionality for positions and summary; update main entry point to allow format selection via command line arguments; modify pytest configuration to include e2e tests for improved test organization.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-testpaths = integration __tests__
+testpaths = integration __tests__ e2e
 python_files = test_*.py *_test.py
 python_classes = Test*
 python_functions = test_*
@@ -14,3 +14,4 @@ markers =
     integration: marks tests as integration tests (deselect with '-m "not integration"')
     unit: marks tests as unit tests
     slow: marks tests as slow (deselect with '-m "not slow"')
+    e2e: marks tests as end-to-end tests (deselect with '-m "not e2e"')
